tests/negative/gold/deprecation-test.gold
tests/negative/deprecation-test.toit:91:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/deprecation-test.toit:71:17: warning: Class 'Deprecated' is deprecated
  deprecated := Deprecated
                ^~~~~~~~~~
tests/negative/deprecation-test.toit:72:28: warning: Class 'Deprecated' is deprecated
  deprecated2 := Deprecated.named
                           ^~~~~~
tests/negative/deprecation-test.toit:76:8: warning: Deprecated constructor of 'A'
  a := A
       ^
tests/negative/deprecation-test.toit:79:5: warning: Deprecated 'A.method1'
  a.method1
    ^~~~~~~
tests/negative/deprecation-test.toit:82:5: warning: Deprecated 'A.some-field'
  a.some-field
    ^~~~~~~~~~
tests/negative/deprecation-test.toit:84:4: warning: Deprecated 'A.some-static-field'
  A.some-static-field
   ^~~~~~~~~~~~~~~~~~
tests/negative/deprecation-test.toit:86:3: warning: Deprecated 'global'
  global
  ^~~~~~
tests/negative/deprecation-test.toit:88:3: warning: Deprecated 'fun'
  fun
  ^~~
Compilation failed
